[project]
name = "yt-app"
version = "0.2.1"
description = "Retrieve YouTube Transcripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint>=4.0.4",
    "yt-lib",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.4",
    "babel>=2.18.0",
    "reportlab>=4.4.10",
    "pywin32>=311",
    "pdoc>=16.0.0",
    "flake8-spellcheck>=0.28.0",
]

[tool.uv.sources]
# yt-lib = { path = "C:/Users/mhenw/Source/repos/Mark-USN/yt_lib" }
yt-lib = { git = "https://github.com/Mark-USN/yt_lib.git", rev = "main" }
